[project]
name = "ricette"
dynamic = ["version"]
description = "Le Ricette di Daniela e Mirko"
readme = "README.md"
requires-python = "==3.11"
dependencies = ["zensical==0.0.9"]

[build-system]
requires = ["setuptools", "setuptools-scm[simple]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
